--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         body {
             background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), 
-                        url('images.unsplash.com'); /* GANTI LINK INI UNTUK BG UTAMA */
+                        url('https://www.instagram.com/p/DKURARDzkKl/?igsh=MWNodnNtZHU0eTAxZA=='); /* GANTI LINK INI UNTUK BG UTAMA */
             background-attachment: fixed;
             background-size: cover;
             background-position: center;
