--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         body {
             background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), 
-                        url('https://www.instagram.com/p/DKURARDzkKl/?igsh=MWNodnNtZHU0eTAxZA=='); /* GANTI LINK INI UNTUK BG UTAMA */
+                        url('https://media.fastdl.app/get?__sig=HM_EOEPCljikd0IrqGEOXg&__expires=1766991198&uri=https%3A%2F%2Fscontent-ord5-1.cdninstagram.com%2Fv%2Ft51.2885-15%2F502706363_17930604186049439_625138888284185187_n.webp%3Fstp%3Ddst-jpg_e35_s1080x1080_sh0.08_tt6%26_nc_ht%3Dscontent-ord5-1.cdninstagram.com%26_nc_cat%3D111%26_nc_oc%3DQ6cZ2QFrhGRsCIN3o5z7ZdIWXbt-nGR6in59jGR2FF3TJsqJEUfhlatKOHjLxideKFR193liPoIf3gxpz7ZGWbOK2mWD%26_nc_ohc%3DSB0sJaYrQSMQ7kNvwHeS155%26_nc_gid%3DJzv9Nyujv0pbhNkN6VaKdA%26edm%3DANTKIIoBAAAA%26ccb%3D7-5%26oh%3D00_AfkpoLunKfhmQuG_vZiPGcfgBpU4wv0RBVOv8bMGEl0KRw%26oe%3D6957F90C%26_nc_sid%3Dd885a2&filename=502706363_17930604186049439_625138888284185187_n.webp'); /* GANTI LINK INI UNTUK BG UTAMA */
             background-attachment: fixed;
             background-size: cover;
             background-position: center;
