--- a/index.html
+++ b/index.html
@@ -161,7 +161,14 @@
     </header>
 
     <div class="container">
-        
+         <section id="about">
+            <h2>The Storyteller</h2>
+            <div class="about-text">
+                <p>Halo, saya <strong>Nahnoo</strong>. Saya percaya bahwa setiap momen memiliki cerita yang layak diceritakan melalui lensa. Sebagai seorang visual storyteller, fokus saya adalah menangkap emosi dalam bentuk fotografi dan menciptakan narasi sinematik dalam video.</p>
+                <p style="margin-top: 15px;">Mulai dari dokumenter hingga proyek kreatif, saya berdedikasi untuk menghasilkan visual yang tidak hanya indah dilihat, tetapi juga memiliki makna yang dalam.</p>
+            </div>
+        </section>
+
         <!-- 1. PHOTO GALLERY -->
         <section id="photo">
             <h2>Photo Gallery</h2>
