--- a/index.html
+++ b/index.html
@@ -228,19 +228,27 @@
 
         <!-- 2. VIDEO GALLERY -->
         <section id="video">
-            <div id="video-intro">
-                <h2>Video Projects</h2>
-                <p class="about-text">Kumpulan karya video yang merangkum cerita, emosi, dan ritme visual.</p>
-                <button class="btn-enter" onclick="showContent('video-intro', 'video-content')">Watch Video</button>
-            </div>
+    <div id="video-intro">
+        <h2>Videography</h2>
+        <p class="about-text">Kumpulan video pendek dan kreatif yang saya publikasikan melalui Instagram.</p>
+        <button class="btn-enter" onclick="showContent('video-intro', 'video-content')">Watch Video</button>
+    </div>
 
-            <div id="video-content" class="hidden-content">
-                <div class="video-wrapper">
-                    <iframe src="https://www.instagram.com/reel/DS0LHU-gWAYnO0928ZrlxpUpXmlGORkGQmenFE0/?igsh=MTk4cWplYXgzbWk2eQ==" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <button onclick="hideContent('video-intro', 'video-content')" style="margin-top:20px; background:none; color:gray; border:none; cursor:pointer;">← Back</button>
-            </div>
-        </section>
+    <div id="video-content" class="hidden-content">
+        <!-- Area untuk menempelkan kode Embed Instagram -->
+        <div style="display: flex; justify-content: center;">
+            
+            <!-- TEMPEL KODE EMBED DARI INSTAGRAM DI BAWAH INI -->
+            <blockquote class="instagram-media" data-instgrm-permalink="LINK_VIDEO_IG_ANDA" data-instgrm-version="14" style=" background:#000; border:0; border-radius:10px; margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%;">
+                <a href="https://www.instagram.com/reel/DS0LHU-gWAYnO0928ZrlxpUpXmlGORkGQmenFE0/?igsh=MTk4cWplYXgzbWk2eQ==" target="_blank">Lihat video di Instagram</a>
+            </blockquote>
+            <script async src="//www.instagram.com"></script>
+            <!-- SELESAI TEMPEL -->
+
+        </div>
+        <button onclick="hideContent('video-intro', 'video-content')" style="margin-top:20px; background:none; color:gray; border:none; cursor:pointer;">← Back</button>
+    </div>
+</section>
 
         <!-- 3. FILM GALLERY -->
         <section id="film">
