--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         <div style="display: flex; justify-content: center;">
             
             <!-- TEMPEL KODE EMBED DARI INSTAGRAM DI BAWAH INI -->
-            <blockquote class="instagram-media" data-instgrm-permalink="LINK_VIDEO_IG_ANDA" data-instgrm-version="14" style=" background:#000; border:0; border-radius:10px; margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%;">
+            <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DS0LHU-gWAYnO0928ZrlxpUpXmlGORkGQmenFE0/?igsh=MTk4cWplYXgzbWk2eQ==" data-instgrm-version="14" style=" background:#000; border:0; border-radius:10px; margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%;">
                 <a href="https://www.instagram.com/reel/DS0LHU-gWAYnO0928ZrlxpUpXmlGORkGQmenFE0/?igsh=MTk4cWplYXgzbWk2eQ==" target="_blank">Lihat video di Instagram</a>
             </blockquote>
             <script async src="//www.instagram.com"></script>
